adding firebase authentication

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^11.4.0",
     "lodash": "^4.17.21",
     "next": "15.1.7",
     "react": "^19.0.0",
